# perun

./: .Makefile.swp  .buildinfo  .coveragerc  .gitignore  .gitmodules  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING  INSTALL-tracer.md  Makefile  README.md  README.rst  changelog.html  cli.html  codecov.yml  collectors.html  config.html  degradation.html  example.html  fuzzing.html  genindex.html  index.html  internals.html  jobs.html  logs.html  manifesto.html  meson.build  objects.inv  overview.html  postprocessors.html  profile.html  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  requirements_docs.txt  requirements_lint.txt  requirements_test.txt  requirements_typing.txt  (+6 more)
perun/: __init__.py  cli.py  meson.build
perun/check/: __init__.py  average_amount_threshold.py  best_model_order_equality.py  exclusive_time_outliers.py  factory.py  fast_check.py  general_detection.py  integral_comparison.py  linear_regression.py  local_statistics.py  meson.build  nonparam_helpers.py  nonparam_kit.py  polynomial_regression.py
perun/check/methods/: __init__.py  abstract_base_checker.py  average_amount_threshold.py  best_model_order_equality.py  exclusive_time_outliers.py  fast_check.py  integral_comparison.py  linear_regression.py  local_statistics.py  meson.build  polynomial_regression.py
perun/cli_groups/: __init__.py  check_cli.py  config_cli.py  meson.build  run_cli.py  utils_cli.py
perun/collect/: __init__.py  meson.build
perun/collect/bounds/: __init__.py  meson.build  parser.py  run.py
perun/collect/complexity/: __init__.py  analysis.py  complexity.py  configurator.py  data_provider.py  exceptions.py  makefiles.py  meson.build  run.py  strategy.py  symbols.py  systemtap.py  systemtap_script.py
perun/collect/kperf/: __init__.py  meson.build  parser.py  run.py
perun/collect/ktrace/: __init__.py  available_bpftrace_kfunc  available_bpftrace_kprobe  available_filter_functions  bpfgen.py  interpret.py  meson.build  parser.py  run.py  symbols.py
perun/collect/memory/: Makefile  __init__.py  backtrace.c  backtrace.h  filter.py  malloc.c  memory.py  meson.build  parsing.py  run.py  syscalls.py  test.c  test.cpp
perun/collect/optimizations/: call_graph.py  cg_projection.py  cg_shaping.py  diff_tracing.py  dynamic_baseline.py  dynamic_sampling.py  dynamic_stats.py  gather.py  optimization.py  static_baseline.py  structs.py
perun/collect/time/: __init__.py  meson.build  run.py  time.py
perun/collect/trace/: __init__.py  collect_engine.py  configuration.py  locks.py  meson.build  parse.py  probes.py  processes.py  run.py  strategy.py  systemtap.py  systemtap_script.py  threads.py  values.py  watchdog.py
perun/core/: __init__.py
perun/core/complexity/: complexity.py  complexity_exceptions.py  symbols.py
perun/core/complexity_collector/: Configuration.cpp  Configuration.h  Makefile  SLList.h  SLListcls.h  ccicc.conf  configuration.h  main.cpp  profile.cpp  profile_api.h  translatelog.sh
perun/core/data/: __init__.py  git.py  vcs.py
perun/core/logic/: __init__.py  commands.py  config.py  pcs.py  profile.py  query.py  runner.py  store.py
perun/core/profile/: converters.py  factory.py  query.py
perun/core/vcs/: __init__.py  git.py
perun/fuzz/: __init__.py  callgraph.py  coverage.py  factory.py  filesystem.py  filetype.py  helpers.py  interpret.py  meson.build  perun_based.py  randomizer.py  structs.py
perun/fuzz/evaluate/: __init__.py  by_coverage.py  by_perun.py  meson.build
perun/fuzz/methods/: __init__.py  binary.py  meson.build  textfile.py  xml.py
perun/logic/: __init__.py  commands.py  config.py  config_templates.py  index.py  locks.py  meson.build  pcs.py  runner.py  stats.py  store.py  temp.py
perun/memory/collector/: Makefile  after_collect.py  backtrace.c  backtrace.h  collect.py  malloc.c
perun/postprocess/: __init__.py  meson.build
perun/postprocess/clusterizer/: __init__.py  meson.build  run.py  sliding_window.py  sort_order.py
perun/postprocess/filter/: __init__.py  filter.py  run.py
perun/postprocess/kernel_regression/: __init__.py  kernel_ridge.py  meson.build  methods.py  run.py
perun/postprocess/moving_average/: __init__.py  meson.build  methods.py  run.py
perun/postprocess/normalizer/: __init__.py  meson.build  normalizer.py  run.py
perun/postprocess/regression_analysis/: __init__.py  data_provider.py  derived.py  generic.py  meson.build  methods.py  regression_exceptions.py  regression_models.py  run.py  specific.py  tools.py  transform.py  transformations.py
perun/postprocess/regressogram/: __init__.py  meson.build  methods.py  run.py
perun/profile/: __init__.py  convert.py  converters.py  factory.py  helpers.py  meson.build  query.py
perun/scripts/: meson.build
perun/select/: __init__.py  abstract_base_selection.py  meson.build  whole_repository_selection.py
perun/templates/: check.jinja2  collect.__init__.jinja2  collect.run.jinja2  diff_view_flamegraph.html.jinja2  diff_view_report.html.jinja2  macros_accordion.html.jinja2  macros_profile_overview.html.jinja2  meson.build  postprocess.__init__.jinja2  postprocess.run.jinja2  view.__init__.jinja2  view.run.jinja2
perun/testing/: __init__.py  asserts.py  meson.build  mock_results.py  utils.py
perun/utils/: __init__.py  bokeh_helpers.py  cli_helpers.py  decorators.py  exceptions.py  helpers.py  log.py  meson.build  metrics.py  profile_converters.py  script_helpers.py  streams.py  structs.py  timestamps.py  view_helpers.py
perun/utils/common/: __init__.py  cli_helpers.py  cli_kit.py  common_kit.py  diff_kit.py  meson.build  script_helpers.py  script_kit.py  traces_kit.py  view_kit.py
perun/vcs/: __init__.py  abstract_repository.py  git.py  git_repository.py  meson.build  vcs_kit.py
perun/view/: __init__.py  cli.py  meson.build  raw.py
perun/view/alloclist/: pretty_output.py  queries.py  run.py
perun/view/raw/: run.py  (+3 more)
perun/view_diff/: __init__.py  meson.build
perun/workload/: __init__.py  external_generator.py  generator.py  integer_generator.py  meson.build  singleton_generator.py  string_generator.py  textfile_generator.py
(+645 files in other folders)
