[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perun"
description = "Perun: Lightweight Performance Version System"
version = "0.20.4"
requires-python = "~=3.8"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "Tomas Fiedor", email = "TomasFiedor@gmail.com"},
    {name = "Jiri Pavela", email = "Jirka.Pavela@gmail.com"},
    {name = "Radim Podola", email = "rpodola@gmail.com"},
    {name = "Simon Stupinsky", email = "simondestupinsky@gmail.com"},
    {name = "Matus Liscinsky"},
    {name = "Peter Mocary"},
    {name = "Ondrej Michal"},
    {name = "Vojtech Hajek"},
    {name = "Vladimir Hucovic"}
]
dependencies = [
    "click==7.0",
    "termcolor==1.1.0",
    "colorama>=0.4",
    "ruamel.yaml>=0.15.6",
    "PyYaml==5.4",
    "GitPython>=2.1.11",
    "bokeh==0.12.6",
    "numpy>=1.15.1,<1.24.0", # Upper limit because of the pyqt_fit custom wheel
    "pandas>=0.20.2,<1.0.0", # Upper limit because of the bkcharts custom wheel, problems with .ix
    "demandimport==0.3.4",
    "Jinja2>=2.10.1, <=3.0.1",
    "python-magic==0.4.15",
    "Faker>=0.8.16",
    "matplotlib==1.5.1",
    "binaryornot==0.4.4",
    "tabulate",
    "importlib-metadata>=0.8",
    "statsmodels>=0.10.0",
    "scikit-learn>=0.19.0",
    "Cython==0.29.20", # Exact version because of the pyqt_fit custom wheel
    "networkx>=2.4",
    "angr>=9.0",
    "scipy>=1.4.1",
]
# Optional dependencies are made dynamic so that we can reuse them in tox. The goal is to have each
# dependency and its version constraints specified only once to avoid inconsistencies.
dynamic = ["optional-dependencies"]


[project.urls]
Repository = "https://github.com/tfiedor/perun.git"
Demonstration = "https://www.fit.vutbr.cz/research/groups/verifit/tools/perun-demo/"
Changelog = "https://github.com/tfiedor/perun/blob/master/CHANGELOG.rst"

[project.scripts]
perun = "perun.cli:launch_cli"

# A flat-level package with multiple directories, we need to specify the python module manually
# See https://stackoverflow.com/questions/72294299/multiple-top-level-packages-discovered-in-a-flat-layout
[tool.setuptools]
py-modules = ["perun"]
package-dir = {"perun" = "perun"}

[tool.setuptools.dynamic]
# Setuptools fails for nested requirements file when installed as `pip install .`, so sadly no
# simple "dev" optional dependency
optional-dependencies.test = { file = ["requirements_test.txt"] }
optional-dependencies.typing = { file = ["requirements_typing.txt"] }
optional-dependencies.lint = { file = ["requirements_lint.txt"] }
optional-dependencies.docs = { file = ["requirements_docs.txt"] }


[tool.setuptools.packages.find]
where = ["."]
include = [
    "perun",
    "perun*",
    "libs",
]
namespaces = true

[tool.setuptools.package-data]
perun = [
    "view/flamegraph/flamegraph.pl",
    "collect/memory/malloc.so",
    "collect/bounds/bin/**",
    "collect/complexity/cpp_sources/*",
    "collect/complexity/lib/*",
    "templates/*",
    "../requirements.txt",
    "../requirements_*.txt",
]


[tool.pytest.ini_options]
addopts = "-p no:warnings -p no:logging"
norecursedirs = [
    "case-studies",
    "venv",
]

[tool.coverage.run]
source = [
    "perun",
]
omit = [
    "tests/*",
    "perun/collect/trace/*",
]