perun_files = files(
    'cli.py',
    '__init__.py',
)

py3.install_sources(
    perun_files,
    subdir: perun_dir,
)

subdir('check')
subdir('cli_groups')
subdir('collect')
subdir('fuzz')
subdir('logic')
subdir('postprocess')
subdir('profile')
subdir('select')
subdir('templates')
subdir('testing')
subdir('thirdparty')
subdir('utils')
subdir('vcs')
subdir('view')
subdir('workload')