perun_logic_dir = perun_dir / 'logic'

perun_logic_files = files(
    '__init__.py',
    'commands.py',
    'config.py',
    'config_templates.py',
    'index.py',
    'locks.py',
    'pcs.py',
    'runner.py',
    'stats.py',
    'store.py',
    'temp.py',
)

py3.install_sources(
    perun_logic_files,
    subdir: perun_logic_dir,
)