perun_postprocess_clusterizer_dir = perun_postprocess_dir / 'clusterizer'

perun_postprocess_clusterizer_files = files(
    '__init__.py',
    'run.py',
    'sliding_window.py',
    'sort_order.py',
)

py3.install_sources(
    perun_postprocess_clusterizer_files,
    subdir: perun_postprocess_clusterizer_dir
)
