perun_postprocess_kernel_regression_dir = perun_postprocess_dir / 'kernel_regression'

perun_postprocess_kernel_regression_files = files(
    '__init__.py',
    'methods.py',
    'run.py',
)

py3.install_sources(
    perun_postprocess_kernel_regression_files,
    subdir: perun_postprocess_kernel_regression_dir
)
