perun_collect_trace_systemtap_dir = perun_collect_trace_dir / 'systemtap'

perun_collect_trace_systemtap_files = files(
    '__init__.py',
    'engine.py',
    'parse_compact.py',
    'script_compact.py',
)

py3.install_sources(
    perun_collect_trace_systemtap_files,
    subdir: perun_collect_trace_systemtap_dir,
)
