perun_postprocess_regression_analysis_extensions_dir = perun_postprocess_regression_analysis_dir / 'extensions'

perun_postprocess_regression_analysis_extensions_files = files(
    '__init__.py',
    'plot_models.py'
)

py3.install_sources(
    perun_postprocess_regression_analysis_extensions_files,
    subdir: perun_postprocess_regression_analysis_extensions_dir
)
